# bevy-mouse-tracking

./: Cargo.toml  README.md
.github/workflows/: ci.yml  testing.ron
examples/: screen.rs  world.rs
src/: lib.rs  mouse_motion.rs  mouse_pos.rs
