[package]
name = "bevy_mouse_tracking_plugin"
description = "A plugin for effortless mouse tracking in the bevy game engine."
version = "0.5.3"
authors = ["JoJoJet <joe102000@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JoJoJet/bevy-mouse-tracking"
keywords = ["gamedev", "bevy", "mouse", "input"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "3281aea5c23495664c8c5dbd1bec57b0ca41f359"
default-features = false
features = [ "bevy_render" ]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "3281aea5c23495664c8c5dbd1bec57b0ca41f359"
default-features = false
features = [
    "bevy_render",
    "png",
    "bevy_asset",
    "bevy_winit"
    ]
